--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "connect-mongostore": "^0.1.4",
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
